<resources>
    <string name="app_name">Project1</string>
    <string name="title_phonebook">PhoneBook</string>
    <string name="title_dashboard">Pictures</string>
    <string name="title_randomgame">Random Game</string>
    <string name="title_search">Search</string>
    <string name="title_dial">Dial</string>
    <string name="title_argame">AR Game</string>
    <string name="randgame_button_text">Spin!</string>
    <string name="start_AR_text">START AR!</string>
    <string name="action_search">Search</string>
</resources>