<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_dial"
        android:icon="@android:drawable/ic_menu_call"
        android:title="@string/title_dial" />
    <item
        android:id="@+id/navigation_phonebook"
        android:icon="@drawable/ic_phonebook"
        android:title="@string/title_phonebook" />

    <item
        android:id="@+id/navigation_pictures"
        android:icon="@drawable/ic_picture"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_randomgame"
        android:icon="@drawable/ic_videogame_asset_black_24dp"
        android:title="@string/title_randomgame" />

    <item
        android:id="@+id/navigation_argame"
        android:icon="@drawable/ic_videogame_asset_black_24dp"
        android:title="@string/title_argame" />
</menu>

